[package]
name = "ABC-ECS"
version = "0.1.2"
edition = "2021"
authors = ["Ethan Almloff <ethanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ABC-Engine/ABC-ECS"
description = "A simple, fast, and flexible Entity-Component-System library for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "1.0.0-beta.1"
slotmap = "1.0.6"
