workspace = { members = ["examples/benchmark"] }
[package]
name = "ABC-ECS"
version = "0.2.0"
edition = "2021"
authors = ["Ethan Almloff <ethanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ABC-Engine/ABC-ECS"
description = "A simple, fast, and flexible Entity-Component-System library for Rust."
keywords = ["ecs", "multithreaded", "library", "game", "fast"]
categories = ["game-development", "library", "ecs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "1.0.0-beta.1"
nohash-hasher = "0.2.0"
rayon = "1.8.0"
rustc-hash = "1.1.0"
slotmap = "1.0.6"

[dev-dependencies]
rand = "0.8.4"

[profile.release]
debug = true
