[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ABC-ECS = { path = "../../../ABC-ECS" }
bevy_ecs = "0.13.2"
colored = "2.1.0"
rand = "0.8.5"

[profile.release]
debug = true
